@@ -153,8 +153,10 @@
   '(("tc-getPROG" "tc-getBUILD_PROG" "tc-getAR" "tc-getAS" "tc-getCC" "tc-getCPP" "tc-getCXX"
      "tc-getLD" "tc-getSTRIP" "tc-getNM" "tc-getRANLIB" "tc-getF77"
      "tc-getF90" "tc-getFORTRAN" "tc-getGCJ" "tc-getBUILD_CC" "tc-getBUILD_CPP"
-     "tc-getBUILD_CXX" "tc-getRC" "tc-getDLLWRAP" "tc-getPKG_CONFIG" "tc-export"
-     "tc-is-cross-compiler" "tc-ninja_magic_to_arch" "tc-has-tls"
+     "tc-getBUILD_CXX" "tc-getRC" "tc-getDLLWRAP" "tc-getPKG_CONFIG"
+     "tc-getBUILD_AR" "tc-getBUILD_AS" "tc-getBUILD_LD" "tc-getBUILD_STRIP"
+     "tc-getBUILD_NM" "tc-getBUILD_RANLIB" "tc-getBUILD_OBJCOPY" "tc-getBUILD_PKG_CONFIG"
+     "tc-export" "tc-is-cross-compiler" "tc-ninja_magic_to_arch" "tc-has-tls"
      "tc-is-hardfloat" "tc-arch-kernel" "tc-arch" "tc-endian"
      "gcc-fullversion" "gcc-version" "gcc-major-version" "gcc-minor-version"
      "gcc-micro-version")
