@@ -1,3 +1,11 @@
+2011-12-29  Christian Faulhammer  <fauli@gentoo.org>
+
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-toolchain-funcs):
+	Add functions tc-getBUILD_AR(), tc-getBUILD_AS(),
+	tc-getBUILD_LD(), tc-getBUILD_STRIP(), tc-getBUILD_NM(),
+	tc-getBUILD_RANLIB(), tc-getBUILD_OBJCOPY() and
+	tc-getBUILD_PKG_CONFIG()
+
 2011-12-28  Christian Faulhammer  <fauli@gentoo.org>
 
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-systemd): Add
